--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mariadb": "^3.3.0",
     "nodemailer": "^6.9.13",
     "p-queue": "^8.0.1",
+    "pdf-lib": "^1.17.1",
     "pug": "^3.0.2",
     "xlsx-template": "^1.4.4"
   },
